...
    <string name="dialog_android_version_message">Android 10+ is not installed in your phone. In this case, you have to connect a device if you want to track your sleep.</string>
    <string name="dialog_set_up_wearable">Set up now</string>
    <string name="dialog_remind_later">Set up later</string>
    <string name="dialog_dismiss">Do not set up</string>
    <string name="snack_report">Recording stopped. Check the results at the Reports page.</string>
    <string name="snack_no_report">You have not given permission to the app to generate the report.</string>
    <string name="ok">OK</string>
    <string name="incompatible_version">Incompatible version</string>
    <string name="microphone_icon_desc">Microphone icon</string>
    <string name="menu_home">Home</string>
    <string name="menu_summaries">Summaries</string>
    <string name="nav_header_desc">Navigation Menu Image</string>
    <string name="drawer_item_home">Analysis</string>
    <string name="hamburger">Open/close menu</string>
    <string name="drawer_item_summary">Reports</string>
    <string name="drawer_item_map">Map</string>
    <string name="tarragona_city">Tarragona</string>
    <string name="reus_city">Reus</string>
    <string name="tarragona_province">Province of Tarragona</string>
    <string name="map_text">Map of %1$s %2$s\nGenerated: %3$s</string>
...
    <string name="text_loading">-</string>
    <string name="green_circle_desc">Green Circle</string>
    <string name="next_button_1" tools:ignore="TypographyFractions"><![CDATA[Next (1/3) >]]></string>
    <string name="next_button_2"><![CDATA[Next (2/3) >]]></string>
    <string name="next_button_3"><![CDATA[Next (3/3) >]]></string>
    <string name="heart_icon_desc">Health measurement</string>
    <string name="start_and_stop_recording">Start and stop recording</string>
    <string name="cancel_recording">Cancel recording</string>
    <string name="recording_cancelled">Recording cancelled. No reports will be generated.</string>
    <string name="tutorial_text_1_2">If you have a Fitbit device, set it up using the Fitbit app (<![CDATA[<a href="https://play.google.com/store/apps/details?id=com.fitbit.FitbitMobile">download</a>]]>). Then, link Soundless with Fitbit in the Configuration menu.</string>
    <string name="tutorial_text_2_2">Go to the <b>Analysis</b> screen and start recording ▶.\n\nKeeping the app running at night, while sleeping, is recommended.\n\nIf you have a bracelet, wear it <b>during</b> the recording.</string>
    <string name="drawer_item_about">About</string>
    <string name="drawer_item_about_desc">About this project</string>
...
    <string name="project_desc">Soundless is a citizen science tool designed to measure the impact of nighttime noise on people\'s heart rate and sleep quality.</string>
    <string name="project_footer"><b>Cloudlab - Cloud and Distributed Systems Lab</b></string>
    <string name="project_title">Universitat Rovira i Virgili</string>
    <string name="urv_logo_desc">Universitat Rovira i Virgili logo</string>
    <string name="soundless_logo_desc">Soundless logo</string>
    <string name="filter_text">FILTER BY…</string>
    <string name="filter_date_btn_text">Date</string>
    <string name="filter_location_btn_text">Location</string>
    <string name="filter_exposure_btn_text">Noise</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_settings_desc">Customize your experience</string>
...
    <string name="anonymous_user">Anonymous user</string>
    <string name="anonymous_description">No profile info available.</string>
    <string name="feature_not_available">This feature is not available for now.</string>
    <string name="switch_sync_health_provider">Enable Fitbit?</string>
    <string name="error_loading_data">Error loading data. Try again later.</string>
    <string name="error_sending_data">Error sending data to the database.</string>
    <string name="correlate_health">Click to discover how noise affected your health.</string>
    <string name="correlate_health_label">Import health data (Fitbit)</string>
    <string name="unknown_classification">Unknown</string>
    <string name="health_not_implemented">Health analysis is not supported in this version yet.</string>
    <string name="access_granted_fitbit">Access to Fitbit granted!</string>
    <string name="access_denied_fitbit">Access to Fitbit denied…</string>
    <string name="health_not_enabled">Please go to Settings and connect with Fitbit.</string>
...
    <string name="info_title">Recording information</string>
    <string name="info_end_date">End date</string>
    <string name="info_start_date">Start date</string>
    <string name="info_heart_rate_avg">Heart rate average</string>
    <string name="info_heart_rate_peak">Peak heart rate</string>
    <string name="info_sleep_changes">Sleep changes</string>
    <string name="delete_recordings_btn">Delete recordings</string>
    <string name="delete_recordings_question">Delete recordings?</string>
    <string name="delete_recordings_message">Are you sure you want to completely remove the data you have recorded?\n</string>
    <string name="delete_recording_question">Delete recording?</string>
    <string name="delete_recording_message">Are you sure you want to completely remove this data you have recorded?\n</string>
    <string name="delete_recordings_confirm">Delete</string>
    <string name="delete_recordings_successful">Recordings deleted.</string>
    <string name="delete_recording_successful">Recording deleted.</string>
    <string name="delete_all_data_cancel">Cancel</string>
    <string name="switch_research">Participate in research study?</string>
    <string name="key_participate_in_study" translatable="false">participateInStudy</string>
    <string name="key_skipped_tutorial" translatable="false">skippedTutorial</string>
    <string name="key_num_times_popup_shown" translatable="false">numTimesPopupShown</string>
    <string name="key_pop_up_days_left_counter" translatable="false">popupDaysLeftCounter</string>
    <string name="key_pop_up_date" translatable="false">popUpDate</string>
...
