<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.SummaryFragment">

    <TextView
        android:id="@+id/correlateHealthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_textview"
        android:fontFamily="@font/pt_sans"
        android:text="@string/correlate_health_label"
        android:textColor="@color/secondary_light"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_correlate_health"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filter_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <HorizontalScrollView
            android:id="@+id/filter_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- TODO change the following construct for a ChipGroup instead of regular buttons -->
            <!-- See: https://material.io/components/chips/android#filter-chip -->
            <LinearLayout
                android:id="@+id/filter_linear_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/filter_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/nunito_light"
                    android:text="@string/filter_text"
                    android:textColor="@color/primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/filter_date_btn"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/secondary"
                    android:fontFamily="@font/nunito_light"
                    android:text="@string/filter_date_btn_text"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    app:cornerRadius="32dp"
                    app:strokeColor="@color/primary"
                    app:strokeWidth="1dip" />

                <Button
                    android:id="@+id/filter_exposure_btn"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/secondary"
                    android:fontFamily="@font/nunito_light"
                    android:text="@string/filter_exposure_btn_text"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:cornerRadius="32dp"
                    app:strokeColor="@color/primary"
                    app:strokeWidth="1dip" />
            </LinearLayout>
        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_summaries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_bar">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_correlate_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:clickable="true"
        android:contentDescription="@string/correlate_health"
        android:src="@drawable/ic_heart_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filter_bar"
        app:layout_constraintVertical_bias="0.933" />

    <View
        android:id="@+id/progress_circular_background"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@drawable/circle_filled"
        android:translationZ="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filter_bar"
        app:layout_constraintVertical_bias="0.933" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="1dp"
        android:visibility="invisible"
        app:indicatorColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filter_bar"
        app:layout_constraintVertical_bias="0.928" />

</androidx.constraintlayout.widget.ConstraintLayout>