<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/recycler_row_border"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/text_active_recording"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/active_recording_text"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_row_item"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/primary"
            android:foregroundGravity="center_vertical"
            android:gravity="center_vertical"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/health_available_icon"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_heart_dark_with_red_circle"
            tools:visibility="visible" />

    </LinearLayout>

</LinearLayout>